# RustTaskFlow

./: .dockerignore  .gitignore  BACKEND_DEPLOYMENT_GUIDE.md  CONFIGURATION_GITHUB_PAGES.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_STEPS.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  LICENSE  README.md  RENDER_DEPLOYMENT.md  docker-compose.yml  index.html  install_rust.sh  railway.toml  render.yaml  setup-production.sh  start.sh
.github/workflows/: deploy.yml
docs/: index.html
docs/assets/: index-Cd8aGkBy.css  index-CzmEpX5a.js  index-Yc4zw7f7.js
rusttaskflow-cli/: Cargo.toml
rusttaskflow-cli/src/: cli.rs  lib.rs  main.rs  storage.rs  task.rs  task_manager.rs  ui.rs
rusttaskflow-core/: Cargo.toml
rusttaskflow-core/src/: error.rs  models.rs
rusttaskflow-frontend/: .env.example  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
rusttaskflow-frontend/src/: App.tsx  index.css
rusttaskflow-frontend/src/components/: Header.tsx  InviteUserModal.tsx  Notifications.tsx  ProjectCard.tsx  ProtectedRoute.tsx  TaskCard.tsx  TaskForm.tsx
rusttaskflow-frontend/src/contexts/: AuthContext.tsx  TaskContext.tsx  WebSocketContext.tsx
rusttaskflow-frontend/src/hooks/: useWebSocket.ts
rusttaskflow-frontend/src/pages/: Dashboard.tsx  Login.tsx  Projects.tsx  Register.tsx
rusttaskflow-frontend/src/services/: api.ts
rusttaskflow-frontend/src/types/: index.ts
rusttaskflow-web/: .env.example  Cargo.toml  Dockerfile  Dockerfile.production
rusttaskflow-web/migrations/: 001_initial.sql  002_fix_timestamps.sql
rusttaskflow-web/src/: auth.rs  database.rs  main.rs  websocket.rs
rusttaskflow-web/src/handlers/: auth.rs  mod.rs  tasks.rs  users.rs
rusttaskflow-web/src/middleware/: auth.rs
