[package]
name = "rusttaskflow-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jimmy Ramsamy-Naick"]
description = "Un gestionnaire de tâches en ligne de commande moderne et performant"
license = "MIT"
repository = "https://github.com/jimmy/RustTaskFlow"
keywords = ["cli", "task-manager", "productivity", "todo"]
categories = ["command-line-utilities"]

[[bin]]
name = "rtf"
path = "src/main.rs"

[dependencies]
# Core library
rusttaskflow-core = { path = "../rusttaskflow-core" }

# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Date and time
chrono = { workspace = true }

# Terminal colors and formatting
colored = "2.0"
termion = "2.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Table formatting
tabled = "0.15"

# Configuration
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true